# neurocolor

./: .gitignore  Cargo.toml  README.md  package.json  rollup.config.js
src/: app.rs  config.rs  lib.rs  slides.rs
